# RibbonPaper

./: Block Code Estimator.ipynb  Planar Code Simulation Notebook  Single Threadede.ipynb  Planar Code Simulation Notebook Parallel.ipynb  README.md  Rectangular Surface Code calculations.ipynb  Rectangular bus Calculations.ipynb  Repetition Code Calculations.ipynb
Simulator/: CMakeLists.txt  conanfile.txt  main.cpp
Simulator/blossom5-v2.05.src/: CMakeLists.txt
Simulator/blossom5-v2.05.src/blossom/: CMakeLists.txt
Simulator/include/: BaseTypes.h
Simulator/include/ErrorModels/: TrivialErrorModel.h  balancedErrorModel.h  fixed_error_model.h  printingErrorModel.h
Simulator/include/codes/: .FifteenSeven.h.swp  FifteenSeven.h  Planar.h  Planar_old.h  Steane (conflicted copy 2020-10-12 180502).h  Steane.h
Simulator/include/sim/: ErrorTracker.h  auto_balanced_error_sim.h  auto_idler.h  balanced_error_sim.h  chp.h  fixed_error_sim.h  fixed_error_sim_post.h  norm.h  sim.h  sim_old.h  state_vector.h  tee_sim.h
Simulator/include/util/: FTCorrectorFactory.h  getRandGen.h  stats.hpp  testRunner.h  utilityFunctions.h
Simulator/src/: FifteenSeven.cpp  MyRandGen.cpp  Planar.cpp  fifteen_seven_main (conflicted copy 2020-10-12 181348).cpp  fifteen_seven_main.cpp  planar_test.cpp  steane_main.cpp  transverse_main.cpp
Simulator/src/sim/: norm.cpp  sim.cpp  sim_old.cpp
Simulator/src/tests/: test_chp.cpp
blossom-5-binding/: setup.py
blossom-5-binding/.ipynb_checkpoints/: CMakeLists-checkpoint.txt
blossom-5-binding/blossom/: CMakeLists.txt
blossom-5-binding/src/.ipynb_checkpoints/: CMakeLists-checkpoint.txt
blossom-5-binding/src/blossom_5_binding/: CMakeLists.txt
blossom-5-binding/src/blossom_5_binding/PerfectMatching/: main.cpp
blossom-5-binding/src/blossom_5_binding/PerfectMatching/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  main-checkpoint.cpp
blossom-5-binding/tests/: test_compute.py
pickles/: [15, 17, 19]-[3, 3, 3]-0.003981071705534973-0.001-7-1000000000- %2 fixes_atempt1.pickle  [15, 17, 19]-[3, 3, 3]-0.005011872336272725-0.001-8-100000000- %2 fixes_atempt1.pickle  [15, 17, 19]-[3, 3, 3]-0.01-0.001-11-10000000- %2 fixes_atempt1.pickle  [17, 19, 21, 23]-[7, 7, 7, 7]-[19, 21, 23, 25]-0.0001-0.01-21-1000000- %2 fixes_atempt1.pickle  [3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3]-[3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27]-0.0001-0.001-11-100000000- %2 fixes_atempt1.pickle  [3, 5, 7, 9, 11, 13, 15]-[7, 7, 7, 7, 7, 7, 7]-[5, 7, 9, 11, 13, 15, 17]-0.05-0.0001-21-1000000- %2 fixes_atempt1.pickle  [3, 5, 7, 9, 11, 13]-[3, 3, 3, 3, 3, 3]-0.01-0.0001-21-1000000000- %2 fixes_atempt1.pickle  [3, 5, 7, 9, 11, 13]-[5, 5, 5, 5, 5, 5]-[5, 7, 9, 11, 13, 15]-0.01-0.0001-21-100000000- %2 fixes_atempt1.pickle  [5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5]-[3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23]-[5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25]-0.0001-0.001995262314968879-14-100000000- %2 fixes_atempt1.pickle  [5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5]-[3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23]-[5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25]-0.001995262314968879-0.01-8-1000000- %2 fixes_atempt1.pickle  [7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7]-[3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23]-[5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25]-0.0001-0.001995262314968879-14-100000000- %2 fixes_atempt1.pickle  [7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7]-[3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23]-[5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25]-0.0001-0.01-21-1000000- %2 fixes_atempt1.pickle
