cmake_minimum_required(VERSION 2.14)
project(steane_sim)
find_package(OpenMP)
find_package(Boost 1.66 COMPONENTS container program_options graph REQUIRED)
set(CMAKE_CXX_STANDARD 20)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release ... FORCE)
endif()

add_compile_options(-Wall -Wconversion -O3 -march=native -ffast-math)

include_directories(include ${Boost_INCLUDE_DIR})
link_directories(${Boost_LIBRARY_DIR})
# Process Abseil's CMake build system
add_subdirectory(abseil-cpp)
add_subdirectory(blossom)

add_executable(steane src/steane_main.cpp)
add_executable(fifteen_seven src/fifteen_seven_main.cpp src/FifteenSeven.cpp)
add_executable(test src/tests/test_chp.cpp)
add_executable(transverse_injection_d2 src/transverse_main.cpp src/sim/norm.cpp src/sim/sim.cpp src/Planar.cpp)
add_executable(transverse_injection_d3 src/transverse_main.cpp src/sim/norm.cpp src/sim/sim.cpp src/Planar.cpp)
add_executable(d2 src/transverse_main.cpp src/sim/norm.cpp src/sim/sim.cpp src/Planar.cpp)
add_executable(d3 src/transverse_main.cpp src/sim/norm.cpp src/sim/sim.cpp src/Planar.cpp)
add_executable(d4 src/transverse_main.cpp src/sim/norm.cpp src/sim/sim.cpp src/Planar.cpp)
add_executable(d5 src/transverse_main.cpp src/sim/norm.cpp src/sim/sim.cpp src/Planar.cpp)
add_executable(d2_no_ti src/transverse_main.cpp src/sim/norm.cpp src/sim/sim.cpp src/Planar.cpp)
add_executable(d3_no_ti src/transverse_main.cpp src/sim/norm.cpp src/sim/sim.cpp src/Planar.cpp)
add_executable(planar_test src/planar_test.cpp src/sim/norm.cpp src/sim/sim.cpp src/Planar.cpp)

add_custom_target(planar DEPENDS transverse_injection_d2 transverse_injection_d3 d2 d3 d4 d5 d2_no_ti d3_no_ti planar_test)

target_compile_definitions(transverse_injection_d2 PRIVATE "DISTANCE=2" "SIM=StateSimulator")
target_compile_definitions(transverse_injection_d3 PRIVATE "DISTANCE=3" "SIM=StateSimulator")
target_compile_definitions(d2 PRIVATE "DISTANCE=2" "SIM=ChpSimulator")
target_compile_definitions(d3 PRIVATE "DISTANCE=3" "SIM=ChpSimulator")
target_compile_definitions(d4 PRIVATE "DISTANCE=4" "SIM=ChpSimulator")
target_compile_definitions(d5 PRIVATE "DISTANCE=5" "SIM=ChpSimulator")

target_compile_definitions(d2_no_ti PRIVATE "DISTANCE=2" "SIM=ChpSimulator" PUBLIC "TI_OFF=1")
target_compile_definitions(d3_no_ti PRIVATE "DISTANCE=3" "SIM=ChpSimulator" PUBLIC "TI_OFF=1")

target_link_libraries(steane PUBLIC OpenMP::OpenMP_CXX PUBLIC absl::hash absl::flat_hash_map PUBLIC ${Boost_LIBRARIES})
target_link_libraries(fifteen_seven PUBLIC OpenMP::OpenMP_CXX PUBLIC absl::hash absl::flat_hash_map PUBLIC ${Boost_LIBRARIES})
target_link_libraries(transverse_injection_d2 PUBLIC OpenMP::OpenMP_CXX  PUBLIC m PUBLIC ${Boost_LIBRARIES} blossom-v)
target_link_libraries(transverse_injection_d3 PUBLIC OpenMP::OpenMP_CXX  PUBLIC m PUBLIC ${Boost_LIBRARIES} blossom-v)
target_link_libraries(d2 PUBLIC OpenMP::OpenMP_CXX  PUBLIC m PUBLIC ${Boost_LIBRARIES} blossom-v)
target_link_libraries(d3 PUBLIC OpenMP::OpenMP_CXX  PUBLIC m PUBLIC ${Boost_LIBRARIES} blossom-v)
target_link_libraries(d4 PUBLIC OpenMP::OpenMP_CXX  PUBLIC m PUBLIC ${Boost_LIBRARIES} blossom-v)
target_link_libraries(d5 PUBLIC OpenMP::OpenMP_CXX  PUBLIC m PUBLIC ${Boost_LIBRARIES} blossom-v)
target_link_libraries(d2_no_ti PUBLIC OpenMP::OpenMP_CXX  PUBLIC m PUBLIC ${Boost_LIBRARIES} blossom-v)
target_link_libraries(d3_no_ti PUBLIC OpenMP::OpenMP_CXX  PUBLIC m PUBLIC ${Boost_LIBRARIES} blossom-v)
target_link_libraries(planar_test PUBLIC OpenMP::OpenMP_CXX PUBLIC absl::hash absl::flat_hash_map PUBLIC m PUBLIC ${Boost_LIBRARIES} blossom-v)
